restore fullscreening, and dynamic sizing to 1.6+ packs